[project]
name = "molecule-renumber"
version = "0.2.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.9"
dependencies = [
    "pyqt6>=6.9.1",
    "pyqt6-webengine>=6.9.0",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.16.0",
    "taskipy>=1.12.0",
]

[tool.taskipy.tasks]
pre_build = "npx tsc"
build = "pyinstaller src/main.py --name molecule-renumber --onefile --windowed --add-data \"src/ngl_viewer.html;.\" --add-data \"src/ngl.js;.\" --add-data \"src/ngl_viewer.js;.\" --clean --noconfirm"
