[project]
name = "Kuromame"
version = "1.0.3"
description = "A desktop application for renumbering molecules with 3D visualization."
readme = "README.md"
requires-python = ">=3.11.9"
dependencies = [
    "pyqt6>=6.9.1",
    "pyqt6-webengine>=6.9.0",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.16.0",
    "taskipy>=1.12.0",
]

[tool.taskipy.tasks]
pre_build = "npx tsc"
build = "pyinstaller src/main.py --name Kuromame --onefile --windowed --add-data \"src/ngl_viewer.html;.\" --add-data \"src/ngl.js;.\" --add-data \"src/ngl_viewer.js;.\" --clean --noconfirm"
